Fix tooltip effect description and icon alignment

--- a/src/styles/skill-tooltip.scss
+++ b/src/styles/skill-tooltip.scss
@@ -41,8 +41,10 @@
         justify-content: center;
 
         .tooltip-effect {
-            margin: 0;
             font-weight: bolder;
+            display: flex;
+            align-items: baseline;
+            line-height: 1rem;
         }
 
         .tooltip-effect-description {
